Actualizando proyecto Sanatorio Margarita

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -52,14 +52,14 @@
         &#60;
       </div>
     </section>
-    <div id="servicios" class="whatsapp">
+    <!-- <div id="servicios" class="whatsapp">
       <a href="https://web.whatsapp.com/%F0%9F%8C%90/es" target="_blank"
         ><img
           src="./images/imgWhatsapp/whatsapp.jpg"
           alt="Logowhatsapp"
           title="whatsapp"
       /></a>
-    </div>
+    </div> -->
     <!--***********************************    SECTIONS CARDS   ***********************************-->
     <main class="container__cards">
       <div class="container__tittle">
