--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,13 +19,13 @@
   <div class="main">
     <div class="main__left">
       <div class="img">
-        <a href="./index">
+        <a href="/">
           <img src="./images/mainLogo.jpg" alt="Main-Logo" title="logo" />
         </a>
       </div>
       <div class="tittle">
-        <a class="t1" href="./index">Sanatorio Margarita</a>
-        <a class="t2" href="./index">COMPROMETIDOS CON TU BIENESTAR</a>
+        <a class="t1" href="/">Sanatorio Margarita</a>
+        <a class="t2" href="/">COMPROMETIDOS CON TU BIENESTAR</a>
       </div>
     </div>
   </div>
@@ -37,7 +37,7 @@
       <i class="fa fa-close fa-2x"></i>
     </a>
     <ul class="main__right" id="">
-      <li><a href="./index">Inicio</a></li>
+      <li><a href="/">Inicio</a></li>
       <li><a href="#">Nosotros</a></li>
       <li><a href="#">Servicios</a></li>
       <li><a href="#">Novedades</a></li>
