--- a/src/views/pages/infopaciente.ejs
+++ b/src/views/pages/infopaciente.ejs
@@ -8,12 +8,12 @@
     <!--***********************************************   HEADER   ***********************************************-->
     <header class="header">
       <div class="logo-container">
-      <img
-        class="logo"
-        src="./images/logo.jpg"
-        alt="logo-titulo"
-        title="logo"
-      />
+        <img
+          class="logo"
+          src="./images/logo.jpg"
+          alt="logo-titulo"
+          title="logo"
+        />
       </div>
       <div class="tittle">
         <a class="t1" href="#">Sanatorio Margarita</a>
@@ -22,11 +22,21 @@
       <i class="fas fa-bars nav-bar btnMenu" id="icono-menu"></i>
       <div class="cont-menu active" id="menu">
         <ul>
-          <li><i class="fas fa-clinic-medical icons"></i></i>Inicio</li>
+          <li>
+            <i class="fas fa-clinic-medical icons"> </i>
+            <a href="/">Inicio</a>
+          </li>
           <li><i class="fas fa-briefcase-medical icons"></i>Turnos</li>
-          <li><i class="fas fa-book-medical icons"></i>Informes de Diagnostico</li>
-          <li><i class="fas fa-microscope icons"></i>Resultados de Laboratorio</li>
-          <li><i class="fas fa-ambulance icons"></i>Cerrar Sesion</li>
+          <li>
+            <i class="fas fa-book-medical icons"></i>Informes de Diagnostico
+          </li>
+          <li>
+            <i class="fas fa-microscope icons"></i>Resultados de Laboratorio
+          </li>
+          <li>
+            <i class="fas fa-ambulance icons"></i>
+            <a href="/"> Cerrar Sesion</a>
+          </li>
         </ul>
       </div>
       <div class="user">
